# image_processor

./: CMakeLists.txt  README.md
project/image_processor/: CMakeLists.txt  image_processor.cpp
project/image_processor/file_worker/: CMakeLists.txt  file_worker.cpp  file_worker.h
project/image_processor/filters/: CMakeLists.txt  crop.cpp  crop.h  edge.cpp  edge.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  matrix_filter.cpp  matrix_filter.h  negative.cpp  negative.h  sharp.cpp  sharp.h  vignette.cpp  vignette.h
project/image_processor/image/: CMakeLists.txt  image.cpp  image.h
project/image_processor/unit_tests/: CMakeLists.txt  test.cpp
